--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script defer src="main.js"></script>
-    <title> Hello, World! </title>
+    <title> Green Trains </title>
 </head>
 <body>
 </body>
